Plug in/Line/api_VecApi.h

//-------------------------------------
// VeCAD point
//-------------------------------------
typedef struct tagVLPOINT {
  double x;
  double y;
}VLPOINT;
//-------------------------------------
// Properties of "Navigator" window (aerial view)
//-------------------------------------
typedef struct tagVLNAVIGATOR {
  int      Left;   
  int      Top; 
  int      Width; 
  int      Height;
  COLORREF ColorZoomRect;
  BOOL     Realtime;
}VLNAVIGATOR;
//-------------------------------------
// Properties of "Layers Manager" window
//-------------------------------------
typedef struct tagVLLAYWIN {
  int      Left;       
  int      Top;       
  int      Width;      
  int      Height;    
}VLLAYWIN;
/////////////////////////////////////////////////
// draw graphics primitives
BOOL VC_API vlSetDrawPen   (double Width, COLORREF Color);
BOOL VC_API vlDrawPoint    (double X, double Y, int Type, int Size);
BOOL VC_API vlDrawLine     (double X1, double Y1, double X2, double Y2);
BOOL VC_API vlDrawPolyline (const VLPOINT* Ver, int n_ver, BOOL bClosed);
BOOL VC_API vlDrawPolygon  (const VLPOINT* Ver, int n_ver, BOOL bFill, BOOL bBorder, COLORREF FillColor);
BOOL VC_API vlDrawCircle   (double X, double Y, double Rad);
BOOL VC_API vlDrawArc      (double X, double Y, double Rad, double Angle1, double Angle2);
BOOL VC_API vlDrawEllipse  (double X, double Y, double Rh, double Rv, double Angle);
BOOL VC_API vlDrawText     (double X, double Y, LPCTSTR szText);
BOOL VC_API vlDrawBitmap   (HBITMAP hbm, int W, int H, double X, double Y, double ResX, double ResY);
BOOL VC_API vlDrawEntity   (int Index, double Xbase, double Ybase, double Xins, double Yins, double Angle, double ScaleX, double ScaleY);
/////////////////////////////////////////////////
// misc
BOOL VC_API vlExecute      (int IdCmd);   // VL_CM_...
BOOL VC_API vlSetAccKey    (int IdCmd, int VirtKey, int Flags);
BOOL VC_API vlClear        (BOOL bSetDefLayout);
BOOL VC_API vlSetFocus     ();
BOOL VC_API vlUpdate       ();
BOOL VC_API vlRedraw       ();
BOOL VC_API vlReset        ();
BOOL VC_API vlPrintSetup   (HWND hParent);
BOOL VC_API vlPrint        (HDC hPrintDC, double Left, double Bottom, double Right, double Top, double ScaleX, double ScaleY, double OriginX, double OriginY);
BOOL VC_API vlDoRaster     (LPCTSTR szFileName, double Left, double Bottom, double Right, double Top, double Res);
BOOL VC_API vlGetWinSize   (HWND hWnd, int* pWidth, int* pHeight);
BOOL VC_API vlSetTimer     (int ID, int Elapse);
BOOL VC_API vlKillTimer    (int ID);
double VC_API vlGetArea    (double X, double Y);
/////////////////////////////////////////////////
// Additional VeCAD controls

// Toolbar
HWND VC_API vlToolBarCreate  (HWND hwParent, int Id, int X, int Y, int W, int H, int* pW, int* pH);
BOOL VC_API vlToolBarButton  (int Id);
// Statusbar
HWND VC_API vlStatBarCreate  (HWND hwParent, int* pH);
BOOL VC_API vlStatBarResize  ();
BOOL VC_API vlStatBarSetText (int iPart, LPCTSTR szText);
// Progress indicator
BOOL VC_API vlIndicCreate   (HWND Parent, LPCTSTR szTitle);
BOOL VC_API vlIndicDestroy  ();
BOOL VC_API vlIndicSetRange (int nFrom,int nTo);
BOOL VC_API vlIndicSetPos   (int iPos);
BOOL VC_API vlIndicSetText  (LPCTSTR szText);
BOOL VC_API vlIndicStep     ();
// "Navigator" window
HWND VC_API vlNavCreate     (HWND hWndParent, HWND hVecWnd, int wstyle, int X, int Y, int W, int H);
BOOL VC_API vlNavResize     (int X, int Y, int W, int H);
BOOL VC_API vlNavUpdate     ();
BOOL VC_API vlNavGetProp    (VLNAVIGATOR* pProp);
BOOL VC_API vlNavPutProp    (const VLNAVIGATOR* pProp);
// "Layers Manager" window
HWND VC_API vlLayWinCreate  (HWND hWndParent, int Style, int X, int Y, int W, int H);
BOOL VC_API vlLayWinResize  (int X, int Y, int W, int H);
BOOL VC_API vlLayWinGetProp (VLLAYWIN* pProp);
BOOL VC_API vlLayWinPutProp (const VLLAYWIN* pProp);
// Set order of entities
BOOL VC_API vlEntSwap       (int iEnt1, int iEnt2);
BOOL VC_API vlEntToTop      (int iEnt);
BOOL VC_API vlEntToBottom   (int iEnt);