Packages/VECAD52/vecad52/VECAD/api_VecApi.bas


'/////////////////////////////////////////////////
'// draw graphics primitives
Public Declare Function vlSetDrawPen Lib "vecad52.dll" (ByVal Width As Double, ByVal Color As Long) As Boolean
Public Declare Function vlDrawPoint Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Typ As Long, ByVal Size As Long) As Boolean
Public Declare Function vlDrawLine Lib "vecad52.dll" (ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Boolean
Public Declare Function vlDrawPolyline Lib "vecad52.dll" (Ver As VLPOINT, ByVal Nver As Long, ByVal bClosed As Boolean) As Boolean
Public Declare Function vlDrawPolygon Lib "vecad52.dll" (Ver As VLPOINT, ByVal Nver As Long, ByVal Fill As Boolean, ByVal Border As Boolean, ByVal FillColor As Long) As Boolean
Public Declare Function vlDrawCircle Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rad As Double) As Boolean
Public Declare Function vlDrawArc Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rad As Double, ByVal Ang1 As Double, ByVal Ang2 As Double) As Boolean
Public Declare Function vlDrawEllipse Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Rh As Double, ByVal Rv As Double, ByVal Ang As Double) As Boolean
Public Declare Function vlDrawText Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double, ByVal Text As String) As Boolean
Public Declare Function vlDrawBitmap Lib "vecad52.dll" (ByVal HBitmap As Long, ByVal W As Long, ByVal H As Long, ByVal X As Double, ByVal Y As Double, ByVal ResX As Double, ByVal ResY As Double) As Boolean
Public Declare Function vlDrawEntity Lib "vecad52.dll" (ByVal Index As Long, ByVal Xbase As Double, ByVal Ybase As Double, ByVal Xins As Double, ByVal Yins As Double, ByVal Angle As Double, ByVal ScaleX As Double, ByVal ScaleY As Double) As Boolean


'/////////////////////////////////////////////////
'// misc
Public Declare Function vlExecute Lib "vecad52.dll" (ByVal IdCmd As Long) As Boolean
Public Declare Function vlSetAccKey Lib "vecad52.dll" (ByVal IdCmd As Long, ByVal VirtKey As Long, ByVal Flags As Long) As Boolean
Public Declare Function vlClear Lib "vecad52.dll" (ByVal bSetDefLayout As Boolean) As Boolean
Public Declare Function vlSetFocus Lib "vecad52.dll" () As Boolean
Public Declare Function vlUpdate Lib "vecad52.dll" () As Boolean
Public Declare Function vlRedraw Lib "vecad52.dll" () As Boolean
Public Declare Function vlReset Lib "vecad52.dll" () As Boolean
Public Declare Function vlPrintSetup Lib "vecad52.dll" (ByVal hParent As Long) As Boolean
Public Declare Function vlPrint Lib "vecad52.dll" (ByVal hPrintDC As Long, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double, ByVal ScaleX As Double, ByVal ScaleY As Double, ByVal OriginX As Double, ByVal OriginY As Double) As Boolean
Public Declare Function vlDoRaster Lib "vecad52.dll" (ByVal FileName As String, ByVal Left As Double, ByVal Bottom As Double, ByVal Right As Double, ByVal Top As Double, ByVal Res As Double) As Boolean
Public Declare Function vlGetWinSize Lib "vecad52.dll" (ByVal hwnd As Long, ByRef pWidth As Long, ByRef pHeight As Long) As Boolean
Public Declare Function vlSetTimer Lib "vecad52.dll" (ByVal ID As Long, ByVal Elapse As Long) As Boolean
Public Declare Function vlKillTimer Lib "vecad52.dll" (ByVal ID As Long) As Boolean
Public Declare Function vlGetArea Lib "vecad52.dll" (ByVal X As Double, ByVal Y As Double) As Double

'/////////////////////////////////////////////////
' Additional VeCAD controls

' Toolbar
Public Declare Function vlToolBarCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByVal ID As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long, ByRef pW As Long, ByRef pH As Long) As Long
Public Declare Function vlToolBarButton Lib "vecad52.dll" (ByVal ID As Long) As Boolean
' Statusbar
Public Declare Function vlStatBarCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByRef pH As Long) As Long
Public Declare Function vlStatBarResize Lib "vecad52.dll" () As Boolean
Public Declare Function vlStatBarSetText Lib "vecad52.dll" (ByVal iPart As Long, ByVal Text As String) As Boolean
' Progress indicator
Public Declare Function vlIndicCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByVal Title As String) As Boolean
Public Declare Function vlIndicDestroy Lib "vecad52.dll" () As Boolean
Public Declare Function vlIndicSetRange Lib "vecad52.dll" (ByVal nFrom As Long, ByVal nTo As Long) As Boolean
Public Declare Function vlIndicSetPos Lib "vecad52.dll" (ByVal iPos As Long) As Boolean
Public Declare Function vlIndicSetText Lib "vecad52.dll" (ByVal Text As String) As Boolean
Public Declare Function vlIndicStep Lib "vecad52.dll" () As Boolean
' "Navigator" window
Public Declare Function vlNavCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByVal hVecWnd As Long, ByVal Style As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function vlNavResize Lib "vecad52.dll" (ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Boolean
Public Declare Function vlNavUpdate Lib "vecad52.dll" () As Boolean
Public Declare Function vlNavGetProp Lib "vecad52.dll" (ByRef Prop As VLNAVIGATOR) As Boolean
Public Declare Function vlNavPutProp Lib "vecad52.dll" (ByRef Prop As VLNAVIGATOR) As Boolean
' "Layers Manager" window
Public Declare Function vlLayWinCreate Lib "vecad52.dll" (ByVal hWndParent As Long, ByVal Style As Long, ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Long
Public Declare Function vlLayWinResize Lib "vecad52.dll" (ByVal X As Long, ByVal Y As Long, ByVal W As Long, ByVal H As Long) As Boolean
Public Declare Function vlLayWinGetProp Lib "vecad52.dll" (ByRef Prop As VLLAYWIN) As Boolean
Public Declare Function vlLayWinPutProp Lib "vecad52.dll" (ByRef Prop As VLLAYWIN) As Boolean
' Set order of entities
Public Declare Function vlEntSwap Lib "vecad52.dll" (ByVal iEnt1 As Long, ByVal iEnt2 As Long) As Boolean
Public Declare Function vlEntToTop Lib "vecad52.dll" (ByVal iEnt As Long) As Boolean
Public Declare Function vlEntToBottom Lib "vecad52.dll" (ByVal iEnt As Long) As Boolean

